UtahLiveDataTest/src/objects/RiskItem__c.object
<CustomObject>
    <description>[Business] Individual Risk Item based on which the Risk Assessment is done</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>IF( (DueDate__c  )&gt; TODAY() ,(DueDate__c) - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of Risk Item</inlineHelpText>
        <label>Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DisableRiskBtn__c</fullName>
        <formula>RiskAssessment__r.DisableRiskBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Risk Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <inlineHelpText>Due Date for Closing Risk Item</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeOrganizationName__c</fullName>
        <formula>Grant__r.InternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee OrganizationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grantee Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>RiskAssessment__r.HideEditButton__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Impact of this Risk Item</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;RI-&apos;+ Grant__r.GrantAbbreviation__c +&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanofAction__c</fullName>
        <label>Plan of Action</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability of this Risk Item</description>
        <inlineHelpText>Probability of this Risk Item</inlineHelpText>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>RiskItems</relationshipLabel>
        <relationshipName>RiskItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskAssessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Assessment</label>
        <referenceTo>RiskAssessment__c</referenceTo>
        <relationshipLabel>RiskItems</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskIdentifiedDate__c</fullName>
        <description>Risk Identified Date</description>
        <label>Risk Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>If(ISPICKVAL(Impact__c,&apos;High&apos;) &amp;&amp; ISPICKVAL(Probability__c,&apos;High&apos;),10,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Performance Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of Risk Item</description>
        <inlineHelpText>Title of Risk Item</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Item</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RiskItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Due_Date_Validation</fullName>
        <active>true</active>
        <description>Due Date Validation</description>
        <errorConditionFormula>DueDate__c &lt; Today()</errorConditionFormula>
        <errorMessage>Due Date must be after today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Identification_Date_Validation</fullName>
        <active>true</active>
        <description>Risk Identification Date Validation</description>
        <errorConditionFormula>RiskIdentifiedDate__c &gt; Today()</errorConditionFormula>
        <errorMessage>Risk Identified Date can not be after Today</errorMessage>
    </validationRules>
</CustomObject>